k8s/02-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v1
  namespace: mesh-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
    spec:
      containers:
      - name: service-a
        image: charanseven/service-a:latest
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v2
  namespace: mesh-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v2
  template:
    metadata:
      labels:
        app: service-a
        version: v2
    spec:
      containers:
      - name: service-a
        image: charanseven/service-a:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: mesh-demo
spec:
  selector:
    app: service-a
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1
  namespace: mesh-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
    spec:
      containers:
      - name: service-b
        image: charanseven/service-b:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: mesh-demo
spec:
  selector:
    app: service-b
  ports:
  - port: 80
    targetPort: 8080
