k8s/04-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-a-vs
  namespace: mesh-demo
spec:
  hosts:
  - "*"
  gateways:
  - mesh-gateway

  http:

  # 🔹 /v2 → v2
  - match:
    - uri:
        prefix: "/v2"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: service-a
        subset: v2

  # 🔹 default → weighted split
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: service-a
        subset: v1
      weight: 80
    - destination:
        host: service-a
        subset: v2
      weight: 20
